eventcore-macros/tests/ui/stream_attr_args.stderr
error: EventCore: #[stream] does not accept parameters
 --> tests/ui/stream_attr_args.rs:7:5
  |
7 |     #[stream(invalid)]
  |     ^^^^^^^^^^^^^^^^^^
